# VoxTell-Chest-Adapter

./: .gitignore  AGENT.md  PROJECT_LAYOUT.md  README.md  package.json
VoxTell/: .gitignore  pyproject.toml  readme.md
VoxTell/voxtell/: __init__.py
VoxTell/voxtell/inference/: predict_from_raw_data.py  predictor.py
VoxTell/voxtell/model/: chest_candidate_risk_adapter.py  chest_candidate_risk_refine_adapter.py  chest_candidate_selective_risk_refine_adapter.py  chest_masked_risk_refine_adapter.py  chest_masked_risk_refine_adapter_v66b.py  chest_text_guided_adapter.py  text_guided_fusion.py  transformer.py  v52_adapter_model.py  v53_adapter_model.py  v65_adapter_model.py  v66_adapter_model.py  v66b_adapter_model.py  v67_adapter_model.py  v6_adapter_model.py  voxtell_model.py
VoxTell/voxtell/utils/: text_embedding.py
datasets/ReXGroundingCT_mirror_meta/: README.md  dataset.json  dataset_mmseg.json  dataset_transformed.json  dataset_transformed_filtered.json
docs/notes/: voxtell_architecture_text_diagram.md  voxtell_rexgroundingct_notes.md
docs/plans/: VoxTell_LoRA_minimal_plan.docx  VoxTell_LoRA_minimal_plan.md  train_subset_30_cases.txt  train_subset_50_cases.txt  train_subset_selection_notes.md  v4_training_changes_checklist.md
docs/reports/: VoxTell_full_val_report.md
scripts/analysis/: evaluate_voxtell_hybrid.py  evaluate_voxtell_subset.py  evaluate_voxtell_val.py  evaluate_voxtell_val_adapter_raw.py  evaluate_voxtell_val_lora_raw.py  inspect_structured_prompts.py
scripts/docx/: create_new_fusion_module_doc.js  create_voxtell_lora_plan_doc.js  create_voxtell_reading_roadmap.js  create_voxtell_val_report.js
scripts/experiments/: run_voxtell_subset.py  run_voxtell_val.py  run_voxtell_val_adapter_raw.py  (+1 more)
实验计划/: README.md  下一阶段结构改进计划.md
实验记录/: README.md  adapter线阶段总结.md  胸部专用融合模块_最小实现方案.md
问题定位/: README.md  probe_case_comparison_catfix.json  probe_case_comparison_catfix.md  v4_current_suppression_analysis.json  v4_current_suppression_analysis.md  v4_probe_cases.json  v4_probe_cases.md  v4_suppression_behavior_catfix.json  v4_suppression_behavior_catfix.md  v4_问题定位实验清单.md  v5_pilot_probe_comparison.json  v5_pilot_probe_comparison.md  v5_soft_target_fp_suppression_analysis.json  v5_soft_target_fp_suppression_analysis.md  v5_soft_target_suppression_analysis.json  v5_soft_target_suppression_analysis.md
(+18 files in other folders)
